{
  "version": 4,
  "terraform_version": "1.8.0",
  "serial": 1074,
  "lineage": "3c74134f-d272-7290-95c7-7c24cfec7e5f",
  "resources": [
    {
      "module": "module.Networking",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0406dd131195a363f",
            "domain": "vpc",
            "id": "eipalloc-0406dd131195a363f",
            "network_border_group": "us-west-1",
            "public_dns": "ec2-13-57-116-251.us-west-1.compute.amazonaws.com",
            "public_ip": "13.57.116.251",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.Networking.aws_internet_gateway.ig",
            "module.Networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Networking",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05c969369880fa2c2",
            "arn": "arn:aws:ec2:us-west-1:417692628647:instance/i-07cb95c49fa542329",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07cb95c49fa542329",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "practice_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-005dacc4b64ec8ed9",
            "private_dns": "ip-10-0-10-122.us-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.10.122",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-08ec627b5b9a96a23",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b77ea0e5f065d121",
            "tags": {
              "Environment": "dev",
              "Name": "dev-us-west-1b-EC2BackEnd"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-us-west-1b-EC2BackEnd"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-05e2f3aa0e3bfa861"
            ]
          },
          "dependencies": [
            "module.Networking.aws_key_pair.ec2_keypair",
            "module.Networking.aws_security_group.internal",
            "module.Networking.aws_subnet.private_subnet",
            "module.Networking.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05c969369880fa2c2",
            "arn": "arn:aws:ec2:us-west-1:417692628647:instance/i-006b4f414f3c3b276",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-006b4f414f3c3b276",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "practice_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ba024b42779c199e",
            "private_dns": "ip-10-0-11-134.us-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.11.134",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c2e288a35f695021",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04d796c1d1f7e8c17",
            "tags": {
              "Environment": "dev",
              "Name": "dev-us-west-1c-EC2BackEnd"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-us-west-1c-EC2BackEnd"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-05e2f3aa0e3bfa861"
            ]
          },
          "dependencies": [
            "module.Networking.aws_key_pair.ec2_keypair",
            "module.Networking.aws_security_group.internal",
            "module.Networking.aws_subnet.private_subnet",
            "module.Networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Networking",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05c969369880fa2c2",
            "arn": "arn:aws:ec2:us-west-1:417692628647:instance/i-0100212d3f42bc9b7",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0100212d3f42bc9b7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "practice_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-08b2ec2614f21b372",
            "private_dns": "ip-10-0-1-146.us-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.146",
            "public_dns": "ec2-54-219-235-77.us-west-1.compute.amazonaws.com",
            "public_ip": "54.219.235.77",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-01c0e956d5c612811",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f25bdda5cc4dc2cf",
            "tags": {
              "Environment": "dev",
              "Name": "dev-us-west-1b-EC2FrontEnd"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-us-west-1b-EC2FrontEnd"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-0d1ccf387c925e394"
            ]
          },
          "dependencies": [
            "module.Networking.aws_key_pair.ec2_keypair",
            "module.Networking.aws_security_group.external",
            "module.Networking.aws_subnet.public_subnet",
            "module.Networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:417692628647:internet-gateway/igw-02c30c20f8758bb01",
            "id": "igw-02c30c20f8758bb01",
            "owner_id": "417692628647",
            "tags": {
              "Environment": "dev",
              "Name": "dev-igw"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-igw"
            },
            "vpc_id": "vpc-04405974004b6a176"
          },
          "dependencies": [
            "module.Networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Networking",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0406dd131195a363f",
            "association_id": "eipassoc-0591dbce13022803e",
            "connectivity_type": "public",
            "id": "nat-0d3cb1eded26c22fc",
            "network_interface_id": "eni-063ed3dba8df3e69a",
            "private_ip": "10.0.1.82",
            "public_ip": "13.57.116.251",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0f25bdda5cc4dc2cf",
            "tags": {
              "Environment": "dev",
              "Name": "nat"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "nat"
            }
          },
          "dependencies": [
            "module.Networking.aws_eip.nat_eip",
            "module.Networking.aws_internet_gateway.ig",
            "module.Networking.aws_subnet.public_subnet",
            "module.Networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Networking",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0889a067c7948300d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0d3cb1eded26c22fc",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0889a067c7948300d",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Networking.aws_eip.nat_eip",
            "module.Networking.aws_internet_gateway.ig",
            "module.Networking.aws_nat_gateway.nat",
            "module.Networking.aws_route_table.private",
            "module.Networking.aws_subnet.public_subnet",
            "module.Networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Networking",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-02c30c20f8758bb01",
            "id": "r-rtb-02cf7cbf0c7ed7e4f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-02cf7cbf0c7ed7e4f",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Networking.aws_internet_gateway.ig",
            "module.Networking.aws_route_table.public",
            "module.Networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:417692628647:route-table/rtb-0889a067c7948300d",
            "id": "rtb-0889a067c7948300d",
            "owner_id": "417692628647",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "dev-private-route-table"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-04405974004b6a176"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:417692628647:route-table/rtb-02cf7cbf0c7ed7e4f",
            "id": "rtb-02cf7cbf0c7ed7e4f",
            "owner_id": "417692628647",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "dev-public-route-table"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-04405974004b6a176"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c9cedfeacde7b4db",
            "route_table_id": "rtb-0889a067c7948300d",
            "subnet_id": "subnet-0b77ea0e5f065d121"
          },
          "dependencies": [
            "module.Networking.aws_route_table.private",
            "module.Networking.aws_subnet.private_subnet",
            "module.Networking.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b61c2fb150af7c37",
            "route_table_id": "rtb-0889a067c7948300d",
            "subnet_id": "subnet-04d796c1d1f7e8c17"
          },
          "dependencies": [
            "module.Networking.aws_route_table.private",
            "module.Networking.aws_subnet.private_subnet",
            "module.Networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-094399b8d2efe6655",
            "route_table_id": "rtb-02cf7cbf0c7ed7e4f",
            "subnet_id": "subnet-0f25bdda5cc4dc2cf"
          },
          "dependencies": [
            "module.Networking.aws_route_table.public",
            "module.Networking.aws_subnet.public_subnet",
            "module.Networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Networking",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:417692628647:security-group/sg-0f077e7ae552ba695",
            "description": "Default SG to allow traffic from the VPC",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "id": "sg-0f077e7ae552ba695",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "dev-default-sg",
            "name_prefix": "",
            "owner_id": "417692628647",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev"
            },
            "tags_all": {
              "Environment": "dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-04405974004b6a176"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Networking",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "external",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:417692628647:security-group/sg-0d1ccf387c925e394",
            "description": "SG for front facing instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d1ccf387c925e394",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.1.0/24"
                ],
                "description": "ALL",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "External SG",
            "name_prefix": "",
            "owner_id": "417692628647",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "External SG"
            },
            "tags_all": {
              "Name": "External SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-04405974004b6a176"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Networking",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:417692628647:security-group/sg-05e2f3aa0e3bfa861",
            "description": "SG for internal instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05e2f3aa0e3bfa861",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.1.0/24"
                ],
                "description": "ALL",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "Internal SG",
            "name_prefix": "",
            "owner_id": "417692628647",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Internal SG"
            },
            "tags_all": {
              "Name": "Internal SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-04405974004b6a176"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:417692628647:subnet/subnet-0b77ea0e5f065d121",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b77ea0e5f065d121",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "417692628647",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "dev-us-west-1b-private-subnet"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-us-west-1b-private-subnet"
            },
            "vpc_id": "vpc-04405974004b6a176"
          },
          "dependencies": [
            "module.Networking.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:417692628647:subnet/subnet-04d796c1d1f7e8c17",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04d796c1d1f7e8c17",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "417692628647",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "dev-us-west-1c-private-subnet"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-us-west-1c-private-subnet"
            },
            "vpc_id": "vpc-04405974004b6a176"
          },
          "dependencies": [
            "module.Networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:417692628647:subnet/subnet-0f25bdda5cc4dc2cf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f25bdda5cc4dc2cf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "417692628647",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "dev-us-west-1b-public-subnet"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-us-west-1b-public-subnet"
            },
            "vpc_id": "vpc-04405974004b6a176"
          },
          "dependencies": [
            "module.Networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:417692628647:vpc/vpc-04405974004b6a176",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0db2eda4e28d17c68",
            "default_route_table_id": "rtb-0623349c28a469217",
            "default_security_group_id": "sg-09c342c5fbc5bbd57",
            "dhcp_options_id": "dopt-0ab370a76cc52bbf0",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04405974004b6a176",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0623349c28a469217",
            "owner_id": "417692628647",
            "tags": {
              "Environment": "dev",
              "Name": "dev-vpc"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-vpc"
            }
          }
        }
      ]
    }
  ]
}